--- a/socialauth/templates/socialauth/editprofile.html
+++ b/socialauth/templates/socialauth/editprofile.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Редактирование профиля</h1>
-<form action="." method="post">
+<h1>Edit profile</h1>
+<form action="{% url socialauth.views.editprofile %}{{ request.urlstate }}" method="post">
 {% csrf_token %}
     <table>
     {{ edit_form }}
     </table>
-    <input type="submit" name="save" value="Cохранить" />
+    <input type="submit" name="save" value="Save" />
 </form>
 {% endblock %}
