--- a/video/templates/embed.html
+++ b/video/templates/embed.html
@@ -3,7 +3,9 @@
 <META http-equiv="Content-Type" content="text/html; charset=utf-8">
 <link type="text/css" href="{{ MEDIA_URL }}css/style.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" media="screen"  href="{{ MEDIA_URL }}css/socialauth.css" />
-<script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-1.4.2.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.js" type="text/javascript"></script>
+<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/ui-lightness/jquery-ui.css" rel="stylesheet" type="text/css" />
+ <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-1.4.2.min.js"></script>
 {% block extra_head %}
 {% endblock %}
 </head>
