--- a/video/templates/mobile/base.html
+++ b/video/templates/mobile/base.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>Yota Play Mobile</title>
+        <title>CloudPub mobile version</title>
         <style type="text/css" media="screen">@import "{{ MEDIA_URL }}jqtouch/jqtouch.min.css";</style>
         <style type="text/css" media="screen">@import "{{ MEDIA_URL }}themes/jqt/theme.min.css";</style>
         <script src="{{ MEDIA_URL }}jqtouch/jquery.1.3.2.min.js" type="text/javascript" charset="utf-8"></script>
@@ -24,9 +24,9 @@
     <body>
         <div>
             <div class="toolbar">
-                <h1>Yota Play</h1>
+                <h1>CloudPub</h1>
             </div>
-            <div class="info">Мобильная версия сайта</div>
+            <div class="info">Mobile version</div>
 	    {% block content %}
             {% endblock %}
         </div>
