--- a/video/templates/buy.html
+++ b/video/templates/buy.html
@@ -4,22 +4,22 @@
 <center>
 {% if rel %}
  <h2>Thank you!</h2>
-	<a href="/video/movie/{{ movie.pk }}">
-              {% if movie.image %}
-		<img class="movie-container-img" src="{{ movie.image }}" alt="{{ movie.title }}">
+	<a href="{% url content content.pk %}">
+              {% if content.image %}
+		<img class="movie-container-img" src="{{ content.image }}" alt="{{ content.title }}">
                {% endif %}
-            <h2>{{ movie.title }}</h2>
+            <h2>{{ content.title }}</h2>
         </a>
-  <b><a href="/video/movie/{{ movie.pk }}" target="_top">Access content</a></b>
+  <h4><a href="{% url content content.pk %}" target="_top">Now you can view your content</a></h4>
  {% else %}
- <h2>{{ movie.title }} - Price: {{ movie.price|currency }}</h2>
-	<a href="/video/movie/{{ movie.pk }}">
-              {% if movie.image %}
-		<img class="movie-container-img" src="{{ movie.image }}" alt="{{ movie.title }}">
+ <h2>{{ content.title }} - Price: {{ content.price|currency }}</h2>
+	<a href="{% url content content.pk %}">
+              {% if content.image %}
+		<img class="movie-container-img" src="{{ content.image }}" alt="{{ content.title }}">
                {% endif %}
         </a><br/>
   <b>Confirm payment</b>
-  <form action="/video/buy/{{ movie.pk }}?{{ request.urlstate }}">
+  <form action="{% url buy content.pk %}?{{ request.urlstate }}">
    <input name="code" type="submit" value="Confirm">
   </form>
 
