--- a/video/templates/site.html
+++ b/video/templates/site.html
@@ -10,12 +10,18 @@
 	<meta name="robots" content="index, follow" />
 	<meta name="viewport" content="width=768px, minimum-scale=1.0, maximum-scale=1.0" />
 	<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/style.css" media="screen" />
-        <!-- JQuery -->
+	<!-- Blueprint and profile -->
+        <link rel="stylesheet" href="{{ MEDIA_URL}}userprofile/css/blueprint/screen.css" type="text/css" media="screen, projection" />
+        <link rel="stylesheet" href="{{ MEDIA_URL }}userprofile/css/blueprint/print.css" type="text/css" media="print" />
+        <link rel="stylesheet" href="{{ MEDIA_URL }}userprofile/css/blueprint/plugins/fancy-type/screen.css" type="text/css" media="screen, projection" />
+        <!--[if IE]><link rel="stylesheet" href="{{ MEDIA_URL}}userprofile/css/blueprint/ie.css" type="text/css" media="screen, projection"><![endif]-->
+	        <!-- JQuery -->
         <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-1.4.2.min.js"></script>
         <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.fancybox-1.3.1.pack.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.js" type="text/javascript"></script>
         <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/ui-lightness/jquery-ui.css" rel="stylesheet" type="text/css" />
         <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}css/jquery.fancybox-1.3.1.css"></script>
+
         <!-- Preprocessed site script -->
         <script type="text/javascript" src="/video/common.js"></script>
         {% block extra_head %}
@@ -29,12 +35,10 @@
 	<h1 class="logo">CloudPub</h1>
 	<!-- Navigation start -->
 <ul id="menu">
-  <li><a href="{% url video.views.index %}{{ request.urlstate }}">{% trans "Home" %}</a></li>
-  <li><a href="{% url categories.views.category request.category %}?sort=rating&page={{ request.page }}" id="rating">{% trans "Highest Rated" %}</a></li>
-  <li><a href="{% url categories.views.category request.category %}?sort=views&page={{ request.page }}" id="views">{% trans "Popular" %}</a></li>
-  <li><a href="{% url categories.views.category request.category %}?sort=publish&page={{ request.page }}" id="publish">{% trans "New" %}</a></li>
-  <li><a class="act" href="{% url video.views.upload %}">{% trans 'Upload' %}</a></li>
-  <li class="authorized"><a class="act" href="{% url socialauth.views.editprofile %}">{% trans 'Profile' %} (<u id="username"></u>)</a></li>
+  <li><a href="{% url index %}">{% trans "Home" %}</a></li>
+  <li><a href="{% url category 'root' %}">{% trans 'Catalog' %}</a></li>
+  <li><a href="{% url video.views.upload %}">{% trans 'Upload' %}</a></li>
+  <li class="authorized"><a href="{% url profile_overview %}">{% trans 'Profile' %} (<u id="username"></u>)</a></li>
   <li class="authorized"><a href="{% url socialauth.views.social_logout %}">{% trans "Sign out" %}</a></li>
   <li class="unauthorized"><a class="act" href="{% url socialauth.views.login_page %}">{% trans "Sign in" %}</a></li>
 </ul>
@@ -43,7 +47,7 @@
 	</div>
 	<div id="content">
 		<div id="main">
-		<form id="search" action="{% url categories.views.category request.category %}">
+		<form id="search" action="{% url category request.category %}">
 		     <input type="text" name="search" value="" /><input type="submit" class="btn-go" value="{% trans "Search" %}" />
 		</form>
 			<!-- Main content start -->
