Social auth refactored

--- a/socialauth/templates/socialauth/login_page.html
+++ b/socialauth/templates/socialauth/login_page.html
@@ -12,20 +12,21 @@
 openid.init('openid_identifier');
 {% endblock %}
 {% block content %}
+<img id="wait_image" style="display: none; position: absolute; left: 50%; margin-left: -110px; top: 40%;" src="{{ MEDIA_URL }}/img/loading.gif"/>
 <form target="_top" class="login_form" method="post" id="openid_form">
-<h1>{% trans "Login through social network" %}</h1>
- <input type="hidden" name="action" value="verify" />
-  <input type="hidden" name="next" value="{{ next }}" />
-  {% csrf_token %}
-	 <div id="openid_input_area">
-		<p>{% trans 'Enter your username and password' %}</p>
-		<input id="id_username" name="username" type="text"/>
-		<input id="id_password" name="password" type="password"/>
-		<input class="btn" id="openid_submit" type="submit" value="{% trans "Sign-In" %}"/>
-	 </div>
+<h1>{% trans "Login with social network" %}</h1>
 {% if error %}
-<b class="error">Invalid login or user name</b>
+<b class="error">{{ error }}</b>
 {% endif %}
+ <input type="hidden" name="action" value="verify" />
+ <input type="hidden" name="next" value="{{ next }}" />
+  {% csrf_token %}
+ <div id="openid_input_area">
+        <p>{% trans 'Enter your username and password' %}</p>
+	<input id="id_username" name="username" type="text"/>
+	<input id="id_password" name="password" type="password"/>
+	<input class="btn" id="openid_submit" type="submit" value="{% trans "Sign-In" %}"/>
+ </div>
 <div id="openid_btns">
 </div>
 <p>Have no account at all? <a href="{% url signup %}{{ request.urlstate }}">{% trans "Register at " %}<span style="color: #F68618;">CloudPub</span></a></p>
