--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
 {% block content %}
   <h1>Action</h1>
   <ul class="actions">
-   <li><h1><a href='{% url ticket_view 0 %}?action=buy'>{% trans "Request consultation" %}</a></h1></li>
-   <li><h1><a href='{% url ticket_view 0 %}?action=sell'>{% trans "Offer consultation" %}</a></h1></li>
+   <li><h1><a href='{% url room_view 0 %}?action=ask'>{% trans "Request consultation" %}</a></h1></li>
+   <li><h1><a href='{% url room_view 0 %}?action=offer'>{% trans "Offer consultation" %}</a></h1></li>
   </ul>
   <h1>Browse by category</h1>
   <ul class="list">
