--- a/templates/mobile/base.html
+++ b/templates/mobile/base.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>Ticket Wish mobile version</title>
+        <title>CloudPub mobile version</title>
         <style type="text/css" media="screen">@import "{{ MEDIA_URL }}jqtouch/jqtouch.min.css";</style>
         <style type="text/css" media="screen">@import "{{ MEDIA_URL }}apple/theme.min.css";</style>
         <script src="{{ MEDIA_URL }}jqtouch/jquery.1.3.2.min.js" type="text/javascript" charset="utf-8"></script>
@@ -20,9 +20,9 @@
     <body>
         <div>
             <div class="toolbar">
-                <h1>Ticket wish</h1>
+                <h1>CloudPub</h1>
             </div>
-            <div class="info">This is sample of site mobile version</div>
+            <div class="info">Mobile verion is under construction</div>
 	    {% block content %}
             {% endblock %}
         </div>
