--- a/templates/room/room.html
+++ b/templates/room/room.html
@@ -6,16 +6,6 @@
 <script type="text/javascript">
 	<!--
 	
-	// The unique random stream for this client, also used as ClientID for creating channel.
-    var stream = Math.floor(Math.random()*100000000).toString();
-    
-    // The name of this user, is prompted to change.
-    var me = "{{ request.user.first_name }} {{request.user.last_name}}";
-    
-    // The name of the person I am connected to.
-	var you = null;
-	
-    // The base URL of the application, so that absolute API URL can be formed.
 	var base_url = "/room";
     
 	// The Adobe stratus URL for my application
@@ -40,85 +30,37 @@
 	var channelId = null;
 	
 	// The channel created with channel API, created in createChannel().
-    var channel = null;
+        var channel = null;
     
-    // Create an AJAX request object based on browser type.
-	function getRequest() {
-		var ajaxRequest;  // The variable that makes Ajax possible!
-		
-		try{ // Opera 8.0+, Firefox, Safari
-			ajaxRequest = new XMLHttpRequest();
-		} catch (e) { // Internet Explorer Browsers
-			try{
-				ajaxRequest = new ActiveXObject("Msxml2.XMLHTTP");
-			} catch (e) {
-				try {
-					ajaxRequest = new ActiveXObject("Microsoft.XMLHTTP");
-				} catch (e) {
-					return false; // Something went wrong
-				}
-			}
-		}
-		return ajaxRequest;
-	}
-	  
 	// Get the Flash Movie by name, e.g., "video1" or "video2".
 	function getFlashMovie(movieName) {
 	    var isIE = navigator.appName.indexOf("Microsoft") != -1;
 	    return (isIE) ? window[movieName] : document[movieName];
 	}
+    	
+	var stream = Math.floor(Math.random()*100000000).toString();
 
-	// On startup, create a channel using the channel API.
-	// Request: POST /create/?stream={stream}
-	// Response: {"token": ... }
-	// The token is used in new goog.appengine.Channel(...) to create a channel.
-	// Once connected, the server sends JSON messages, with "method" attribute
-	// of value "send" or "connect". This function invokes received() and connected()
-	// respectively for these messages.
-    function createChannel() {
-		var request = getRequest();
-		var url = base_url + "/stream/" + stream + ":open";
-		request.onreadystatechange = function() {
-			if (request.readyState == 4) {
-				if (request.status == 200) {
-					// log("response " + request.responseText);
-					data = eval("(" + request.responseText + ")");
-					channelId = data.token;
-					log("channel created");
-					channel = new goog.appengine.Channel(channelId);
-					socket = channel.open();
-
-					socket.onmessage = function(event) {
-						obj = eval("(" + event.data + ")");
-						if (obj.method == "send") {
-							received(obj.body);
-						} else if (obj.method == "connect") {
-							connected(obj.play);
-						}
-					};
+        function createChannel() {
+		$.get( base_url + "/stream/" + stream + ":open", function( data ) {
+			log("Channel created");
+			Server.connect( "http://localhost:9000" );
+                        Server.subscribe( stream, function( data ) {
+				log("Data received:" + data );
+			});
+		} );
+    	}
     
-					socket.onerror = function(event) {
-						log("socket error: " + event.code + " " + event.description);
-					};
-				} else {
-					log("create channel failed");
-				}
-			}
-		};
-		request.open("POST", url, true);
-		request.send('dummy');
-    }
+	createChannel();
     
-    // When the page is launched, it creates a channel first.
-    createChannel();
-    
-    // When VideoIO is created, and user has specified the name, start local video.
+        // When VideoIO is created, and user has specified the name, start local video.
 	function onCreationComplete(event) {
 		if (event.objectID == "video1") {
-			if (me) {
-				var url = media_url + "?publish=" + stream;
-				getFlashMovie("video1").setProperty("src", url);
-			}
+			var url = media_url + "?publish=" + stream;
+			getFlashMovie("video1").setProperty("src", url);
+		}		
+		if (event.objectID == "video2") {
+			var url = media_url + "?play=" + stream;
+			getFlashMovie("video2").setProperty("src", url);
 		}		
 	}
 
@@ -131,117 +73,12 @@
 		}
 	}
 
-	// Initiate the login process. If change is true, then request a change of
-	// connected person, when the user clicks on "Next Person" link.
-	// Request: /login/?stream={stream} or /login/?stream={stream}&change=true
-	// Request-body: {"publish": ...}
-	// Response-body: {"play": ...}
-	// Where publish and play are play URLs for local and remote VideoIO objects. 
-	function login(change) {
-		if (!src) {
-			alert("You must Login before publishing");
-			return;
-		}
-		
-		var request = getRequest();
-		var url = base_url + "/stream/" + stream + ":connect";
-		request.onreadystatechange = function() {
-			if (request.readyState == 4) {
-				if (request.status == 200) {
-					// log("response " + request.responseText);
-				} else {
-					log("login failed");
-				}
-			}
-		};
-		request.open("POST", url, true);
-		request.send('{"publish":"' + src + '"}');
-	}
-
-	// Send a text chat message, if connected to other person.
-	// Request: POST /send/?stream={stream}
-	// Request-body: {"dest": ..., "body": ... }
-	// Here dest is the other person's VideoIO play URL.
 	function send() {
 		var msg = document.getElementById("input").value;
 		if (msg) {
 			document.getElementById("input").value = "";
-			
-			if (dest) {
-				log("Me: " + msg);
-				var request = getRequest();
-				var url = base_url + "/stream/" + stream + ":message";
-				request.open("POST", url, true);
-				request.send('{"dest":"' + dest + '", "body": "You: ' + msg + '"}');
-			}
-			else {
-				log("Me (not connected): " + msg);
-			}
-		}
-	}
-
-	// When the server says we are connected to the supplied play URL,
-	// change the remote VideoIO's "src" attribute, and update "you" and "dest".
-	function connected(play) {
-		//log("connected to " + play);
-		var olddest = dest;
-		you = "";
-		dest = play;
-		if (!dest)
-			dest = null;
-				
-		if (dest) {
-			index = dest.indexOf("?");
-			var parts = dest.substr(index+1).split("&");
-			for (var i=0; i<parts.length; ++i) {
-				var part = parts[i];
-				if (part.indexOf("nickname=") == 0) {
-					you = part.substr(9);
-				}
-			}
-		}
-		if (olddest != dest) {
-			getFlashMovie("video2").setProperty("src", dest);
-		}			
-		
-		if (you) {
-			log("connected to " + you);
-			document.getElementById("remote").innerHTML = you;
-		} else {
-			log("you are not connected");
-			document.getElementById("remote").innerHTML = "You are not connected";
-		}
-	}
-	
-	// When the server sends us a text message, just display the message.
-	function received(body) {
-		log(body);
-	}
-		
-	// When the user toggle's the Login/Logout link, set or reset the local and
-	// remote VideoIO. On logout, also invoke the logout() function. On logout, the
-	// login() function will be invoked when the local VideoIO is ready with nearId.
-	function toggleLogin() {
-		var button = document.getElementById("login");
-		if (button.innerHTML == "Logout") {
-			button.innerHTML = "Login";
-			log("logged out");
-			logout();
-			getFlashMovie("video1").setProperty("src", null);
-			getFlashMovie("video2").setProperty("src", null);
-			document.getElementById("remote").innerHTML = "You are not connected";
-			you = "";
-			src = null;
-			dest = null;
-		}
-		else {
-			if (me != null || promptNickname()) {
-				document.getElementById("local").innerHTML = "I am " + me;
-				log("logging in");
-				button.innerHTML = "Logout";
-				var url = media_url + "?publish=" + stream;
-				getFlashMovie("video1").setProperty("src", url);
-			}
+			log("Me: " + msg);
+			Server.send( stream, msg );
 		}
 	}
 	
@@ -301,12 +138,6 @@
 		<div style="float: right; height: 18px;">
 			<div id="local" style="float: left;"></div>
 		</div>
-		<script>
-			if (!me)
-				document.getElementById("login").innerHTML = "Login";
-			document.getElementById("local").innerHTML = me ? "I am " + me : "";
-		</script>
-		<br/> 
 		<textarea id="history" autocomplete="off"
 			style="width: 320px; height: 410px;"></textarea>
 		<br/>
